Styles - more spacing constants (up to -9), minor corrections

--- a/resources/front/src/main/assets/styles/_variables.scss
+++ b/resources/front/src/main/assets/styles/_variables.scss
@@ -20,11 +20,19 @@ $color-facebook:                    #3b5998;
 $color-twitter:                     #55acee;
 $color-google:                      #dd4b39;
 
+$spacer: 1rem;
+
+$spacers: (
+  6: ($spacer 4),
+  7: ($spacer * 5),
+  8: ($spacer * 6),
+  9: ($spacer * 7)
+);
+
 // GENERAL
 $line-height-base:                  1.4;
 $headings-font-weight:              400;
 $font-size-base:                    1rem; // Assumes the browser default, typically 1rem = `16px`
-
 
 // NAVBAR
 $navbar-padding-y:                  15px;
